# Birdy3d

./: .clang-format  .clang-tidy  .gitignore  AbsoluteLayout_8hpp_source.html  Adapter_8hpp_source.html  Application_8hpp_source.html  Base_8hpp_source.html  Birdy3d_8hpp_source.html  Button_8hpp_source.html  CMakeLists.txt  Camera_8hpp_source.html  Canvas_8hpp_source.html  Channel_8hpp_source.html  CheckBox_8hpp_source.html  CollapsibleBox_8hpp_source.html  CollapsibleContainer_8hpp_source.html  ColliderComponent_8hpp_source.html  Collider_8hpp_source.html  CollisionEvent_8hpp_source.html  CollisionMesh_8hpp_source.html  CollisionShape_8hpp_source.html  CollisionSphere_8hpp_source.html  Collision_8hpp_source.html  Color_8hpp_source.html  Commands_8hpp_source.html  Component_8hpp_source.html  Console_8hpp_source.html  Container_8hpp_source.html  ContextMenu_8hpp_source.html  ConvexMeshGenerators_8hpp_source.html  DirectionalLayout_8hpp_source.html  DirectionalLight_8hpp_source.html  Doxyfile  Entity_8hpp_source.html  EventBus_8hpp_source.html  Event_8hpp_source.html  FPPlayerController_8hpp_source.html  FPSCounter_8hpp_source.html  GridLayout_8hpp_source.html  Identifier_8hpp_source.html  (+611 more)
engine/: CMakeLists.txt  Makefile
engine/src/: Birdy3d.hpp  CMakeLists.txt
engine/src/core/: Application.cpp  Application.hpp  Base.hpp  CMakeLists.txt  Component.cpp  Component.hpp  EventDispatcher.hpp  FPPlayerController.cpp  FPPlayerController.hpp  Forward.hpp  GameObject.cpp  GameObject.hpp  Input.cpp  Input.hpp  Logger.cpp  Logger.hpp  ResourceHandle.hpp  ResourceManager.cpp  ResourceManager.hpp  RessourceManager.cpp  RessourceManager.hpp  Transform.cpp  Transform.hpp
engine/src/ecs/: CMakeLists.txt  Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  Forward.hpp  Scene.cpp  Scene.hpp  Transform.cpp  Transform.hpp
engine/src/events/: CollisionEvent.hpp  Event.hpp  EventBus.hpp  Forward.hpp  InputClickEvent.hpp  InputEvents.hpp  InputScrollEvent.hpp  ResourceEvents.hpp  TransformChangedEvent.hpp  WindowResizeEvent.hpp
engine/src/physics/: CMakeLists.txt  Collider.cpp  Collider.hpp  ColliderComponent.cpp  ColliderComponent.hpp  Collision.hpp  CollisionMesh.cpp  CollisionMesh.hpp  CollisionShape.cpp  CollisionShape.hpp  CollisionSphere.cpp  CollisionSphere.hpp  ConvexMeshGenerators.cpp  ConvexMeshGenerators.hpp  Forward.hpp  IntermediateMesh.cpp  IntermediateMesh.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  SphereCollider.hpp
engine/src/render/: CMakeLists.txt  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Forward.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelComponent.cpp  ModelComponent.hpp  ModelOptions.hpp  PointLight.cpp  PointLight.hpp  Rendertarget.cpp  Rendertarget.hpp  Shader.cpp  Shader.hpp  Spotlight.cpp  Spotlight.hpp  Texture.cpp  Texture.hpp  Vertex.hpp
engine/src/scene/: CMakeLists.txt  Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  GameObject.cpp  GameObject.hpp  PrimitiveGenerator.cpp  PrimitiveGenerator.hpp  Scene.hpp  Transform.cpp  Transform.hpp
engine/src/shaders/: dDepth.fs  dDepth.glsl  deferred_lighting.glsl  directional_light_depth.glsl  forward_lighting.glsl  forward_lighting_tesselation.glsl  gBuffer.glsl  geometry_buffer.glsl  geometry_buffer_tesselation.glsl  lighting.glsl  normal_display.glsl  pDepth.glsl  point_light_depth.glsl  rect.fs  rect.vs  simple_color.glsl  spot_light_depth.glsl  ssao.glsl  ssao_blur.glsl  text.glsl  ui.fs  ui.glsl  ui.vs  ui_rectangle.glsl
engine/src/shaders/includes/: geometry_vertex_shader.glsl  lighting.glsl  material.glsl  tesselation.glsl
engine/src/ui/: AbsoluteLayout.hpp  CMakeLists.txt  Canvas.cpp  Canvas.hpp  Container.hpp  DirectionalLayout.cpp  DirectionalLayout.hpp  Forward.hpp  GridLayout.cpp  GridLayout.hpp  Layout.cpp  Layout.hpp  MaxLayout.hpp  OpenGLPainter.cpp  OpenGLPainter.hpp  Painter.cpp  Painter.hpp  Rect.hpp  Rectangle.cpp  Rectangle.hpp  Shape.hpp  Text.cpp  Text.hpp  TextRenderer.cpp  TextRenderer.hpp  Theme.cpp  Theme.hpp  Triangle.cpp  Triangle.hpp  UIEvent.hpp  UI_Vertex.hpp  Units.cpp  Units.hpp  Utils.cpp  Utils.hpp  Widget.cpp  Widget.hpp  Window.cpp  Window.hpp
engine/src/ui/console/: Commands.hpp  Console.cpp  Console.hpp  UICommands.cpp
engine/src/ui/widgets/: AbsoluteLayout.hpp  Button.hpp  CheckBox.cpp  CheckBox.hpp  CollapsibleBox.hpp  CollapsibleContainer.hpp  ContextMenu.cpp  ContextMenu.hpp  DirectionalLayout.cpp  DirectionalLayout.hpp  FPSCounter.hpp  Label.hpp  NumberInput.cpp  NumberInput.hpp  ScrollContainer.cpp  ScrollContainer.hpp  ScrollView.cpp  ScrollView.hpp  Scrollable.cpp  Scrollable.hpp  TextField.cpp  TextField.hpp  Textarea.cpp  Textarea.hpp  TreeView.cpp  TreeView.hpp  WindowSnapArea.cpp  WindowSnapArea.hpp
engine/src/utils/: CMakeLists.txt  Channel.hpp  Color.cpp  Color.hpp  FPPlayerController.cpp  FPPlayerController.hpp  Forward.hpp  Identifier.cpp  Identifier.hpp  PrimitiveGenerator.cpp  PrimitiveGenerator.hpp  Ranges.hpp  Stacktrace.cpp  Stacktrace.hpp  TextureLoader.cpp  TextureLoader.hpp  Unicode.cpp  Unicode.hpp
engine/src/utils/serializer/: Adapter.cpp  Adapter.hpp  Json.cpp  Json.hpp  PointerRegistry.cpp  PointerRegistry.hpp  Reflector.hpp  Serializer.hpp  TypeRegistry.hpp  Types.cpp  Types.hpp
sandbox/: CMakeLists.txt  Makefile  build.sh
sandbox/resources/themes/: gruvbox-dark.json  gruvbox-light.json
sandbox/ressources/themes/: gruvbox.json
sandbox/src/: FileBrowser.cpp  FileBrowser.hpp  ResourceInput.hpp  main.cpp
scripts/: buildutils.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+24 more)
test/: CMakeLists.txt  common.hpp  main.cpp
test/ui/: CMakeLists.txt  Layouts.cpp  Text.cpp  Units.cpp
(+46 files in other folders)
